--- a/src/main/resources/templates/edit_ad.html
+++ b/src/main/resources/templates/edit_ad.html
@@ -63,6 +63,14 @@
     <label for="add_information">Описание</label>
     <input type="text" class="form-control" th:value="*{additionalInformation}" name="add_information" id="add_information">
   </div>
+  <div class="form-group">
+    <label for="car_type">Состояние объявления</label>
+    <select class="form-control" id="condition" name="condition">
+      <tr th:each="state : ${adState}">
+        <option th:text="${state.title}" th:selected="${state.title} == *{condition.title}"></option>
+      </tr>
+    </select>
+  </div>
   <button class="btn btn-primary" type="submit">Изменить</button>
 </form>
 </body>
