--- a/src/main/resources/templates/my_ads.html
+++ b/src/main/resources/templates/my_ads.html
@@ -13,16 +13,17 @@
 <form th:action="@{/goMainMenu/{id}(id=${user.id})}">
     <button type="submit" style="margin: 0 0 0 auto;" class="btn btn-primary" >Основное меню</button>
 </form>
-<table style="width: 50%;margin: auto" class="table table-striped">
+<table style="width: 60%;margin: auto" class="table table-striped">
     <thead>
     <tr>
         <th>Марка</th>
         <th>Модель</th>
         <th>Год</th>
         <th>Цена</th>
-        <th width="200">Подробная информация</th>
+        <th width="100">Подробная информация</th>
         <th></th>
         <th></th>
+        <th>Состояние объявления</th>
     </tr>
     </thead>
     <tbody>
@@ -31,9 +32,10 @@
             <td th:text="${car.model}"></td>
             <td th:text="${car.year}"></td>
             <td th:text="${car.price}"></td>
-            <td>  <a th:href="@{/car_information/{id}(id=${car.id})}">Информация</a></td>
+            <td width="100">  <a th:href="@{/car_information/{id}(id=${car.id})}">Информация</a></td>
             <td><a th:href="@{/edit_ad/{userId}/{adId}(userId=${user.id},adId=${car.id})}">изменить</a></td>
             <td><a th:href="@{/delete_ad/{userId}/{adId}(userId=${user.id},adId=${car.id})}">удалить</a></td>
+            <td th:text="${car.condition.title}"></td>
         </tr>
     </tbody>
 </table>
