--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -34,7 +34,7 @@
         <div class="form-row">
             <div class="col-md-6 mb-3">
                 <label for="phone">Номер телефона</label>
-                <input type="number" class="form-control"  maxlength="10" id="phone" placeholder="0630000000" name="phone" required>
+                <input type="number" onkeypress="return event.charCode >= 48" class="form-control"  maxlength="10" id="phone" placeholder="0630000000" name="phone" required>
             </div>
             <div class="col-md-3 mb-3">
                 <label for="password">Пароль</label>
