--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1 class="h1">Платформа с объявлениями о продаже автомобилей</h1>
-   <a href="registration">Регистрация</a>
+   <a href="/registration">Регистрация</a>
     <br>
-    <a href="authorization">Авторизация</a>
+    <a href="/authorization">Авторизация</a>
 </body>
 </html>
