--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,12 +1,8 @@
-/*.selector-for-some-widget {*/
-/*    box-sizing: content-box;*/
-/*}*/
-
 form {
     width:50% ;
     margin: auto;
 }
 
-/*button {*/
-/*    margin: 0 0 0 auto;*/
-/*}*/
+table{
+    margin: auto;
+}
