--- a/src/main/resources/templates/car_information.html
+++ b/src/main/resources/templates/car_information.html
@@ -5,10 +5,19 @@
     <title>Информация про авто</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
-    <h1 class="text-center" th:text="${car.brand} + ' ' + ${car.model}"></h1>
-    <table style="width: 70%;margin: auto" class="table table-striped">
+<div class="fixed-top">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <a class="navbar-brand"  th:href="@{/backMainMenu/{id}(id=${user.id})}">Все объявления</a>
+        <a class="navbar-brand"  th:href="@{/my_ads/{id}(id=${user.id})}">Мои объявления</a>
+        <a class="navbar-brand"  th:href="@{/filter/{id}(id=${user.id})}">Фильтр</a>
+        <a class="btn btn-lg btn-danger" style="margin-left: auto" th:href="@{/exit_profile}">Выход</a>
+    </nav>
+</div>
+    <h1 class="text-center" style="margin-top: 100px" th:text="${car.brand} + ' ' + ${car.model}"></h1>
+    <table style="width: 70%;margin-top: 20px;" class="table table-striped">
         <thead>
         <tr>
             <th>Год</th>
