--- a/src/main/resources/templates/mainShowWithFilter.html
+++ b/src/main/resources/templates/mainShowWithFilter.html
@@ -5,20 +5,24 @@
     <title>Advertisement</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
 <div>
-    <form th:action="@{/delete_filter/{id}(id=${user.id})}">
-        <button type="submit" class="btn btn-success">Убрать фильтры</button>
-    </form>
-    <form th:action="@{/my_ads/{id}(id=${user.id})}">
-        <button style="margin: 0 0 0 auto;" type="submit" class="btn btn-primary" >Мои объявления</button>
-    </form>
-    <form action="/exit_profile"  method="get">
-        <button type="submit" class="btn btn-danger">Выход</button>
-    </form>
-    <table style="width: 50%;margin: auto" class="table table-striped">
+    <div class="fixed-top">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <a class="navbar-brand"  th:href="@{/backMainMenu/{id}(id=${user.id})}">Все объявления</a>
+            <a class="navbar-brand"  th:href="@{/my_ads/{id}(id=${user.id})}">Мои объявления</a>
+            <a class="navbar-brand"  th:href="@{/filter/{id}(id=${user.id})}">Фильтр</a>
+            <a class="btn btn-lg btn-danger" style="margin-left: auto" th:href="@{/exit_profile}">Выход</a>
+        </nav>
+    </div>
+    <div style="margin-top: 100px" class="text-center">
+        <form th:action="@{/delete_filter/{id}(id=${user.id})}">
+            <button type="submit" class="btn btn-success">Убрать фильтры</button>
+        </form>
+    </div>
+    <table style="width: 50%;margin-top: 20px" class="table table-striped">
         <thead>
         <tr>
             <th>Марка</th>
@@ -34,10 +38,20 @@
             <td th:text="${ca.model}"></td>
             <td th:text="${ca.year}"></td>
             <td th:text="${ca.price}"></td>
-            <td width="200">  <a th:href="@{/car_information/{id}(id=${ca.id})}">Информация</a></td>
+            <td width="200">  <a th:href="@{/car_information/{ad_id}/{user_id}(ad_id=${ca.id},user_id=${user.id})}">Информация</a></td>
         </tr>
         </tbody>
     </table>
 </div>
 </body>
 </html>
+
+<!--<form th:action="@{/delete_filter/{id}(id=${user.id})}">-->
+<!--    <button type="submit" class="btn btn-success">Убрать фильтры</button>-->
+<!--</form>-->
+<!--<form th:action="@{/my_ads/{id}(id=${user.id})}">-->
+<!--    <button style="margin: 0 0 0 auto;" type="submit" class="btn btn-primary" >Мои объявления</button>-->
+<!--</form>-->
+<!--<form action="/exit_profile"  method="get">-->
+<!--    <button type="submit" class="btn btn-danger">Выход</button>-->
+<!--</form>-->
