--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -5,13 +5,13 @@
     <title>Registration</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
     <div class="text-center">
     <h1>Регистрация</h1>
     </div>
-    <form action="addUser" method="post" class="needs-validation" novalidate>
+    <form action="/addUser" method="post" class="needs-validation" novalidate>
         <div class="form-row">
             <div class="col-md-4 mb-3">
                 <label for="firstName">Имя</label>
@@ -24,10 +24,7 @@
             <div class="col-md-4 mb-3">
                 <label for="email">Электронная почта</label>
                 <div class="input-group">
-                    <input type="text" class="form-control" id="email" name="email" placeholder="123@gmail.com" required>
-                    <div class="invalid-feedback">
-                        Please choose a username.
-                    </div>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="123@gmail.com" required>
                 </div>
             </div>
         </div>
