--- a/src/main/resources/templates/mainShowWithFilter.html
+++ b/src/main/resources/templates/mainShowWithFilter.html
@@ -18,7 +18,7 @@
         </nav>
     </div>
     <div style="margin-top: 100px" class="text-center">
-        <form th:action="@{/delete_filter/{id}(id=${user.id})}">
+        <form th:action="@{/remove_filter/{id}(id=${user.id})}">
             <button type="submit" class="btn btn-success">Убрать фильтры</button>
         </form>
     </div>
